--- a/index.html
+++ b/index.html
@@ -1,16 +1,78 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
-
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+        rel="stylesheet">
+  <link href="css/index.css"
+        rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1.0"
+        name="viewport">
 </head>
-
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <main>
+    <header>
+      <nav>
+        <a class="hover"
+             href="/services.html">Services</a> <a class="hover"
+             href="#">Product</a> <a class="hover"
+             href="#">Vision</a> <a class="hover"
+             href="#">Features</a> <a class="hover"
+             href="#">About</a> <a class="hover"
+             href="#">Contact</a> <a class="img"
+             href="#"><img alt="Great Idea! Company logo."
+             class="logo"
+             src="img/logo.png"></a>
+      </nav>
+    </header>
+    <section class="block">
+      <section class="top">
+        <h1>Innovation On Demand</h1>
+        <div class="button">
+          Get Started
+        </div>
+      </section>
+      <section class="top">
+        <img alt="Image of a code snippet."
+                 src="img/header-img.png">
+      </section>
+    </section>
+    <hr>
+    <div class="container">
+      <section class="content">
+        <h3>Features</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <section class="content">
+        <h3>About</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section><img alt="Image of code snippets across the screen"
+           class="middle-img"
+           src="img/mid-page-accent.jpg">
+      <section class="content2">
+        <h3>Services</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <section class="content2">
+        <h3>Product</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <section class="content2">
+        <h3>Vision</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </div>
+    <hr>
+    <section class="contact">
+      <h3>Contact</h3>
+      <address>
+        123 Way 456 Street Somewhere, USA
+      </address><a href="tel:#">1 (888) 888-8888</a> <a href="mailto:#">sales@greatidea.io</a>
+    </section>
+    <footer>
+      Copyright Great Idea! 2018
+    </footer>
+  </main>
 </body>
 </html>
