--- a/services.html
+++ b/services.html
@@ -22,7 +22,8 @@
              href="#">Vision</a> <a class="hover"
              href="#">Features</a> <a class="hover"
              href="#">About</a> <a class="hover"
-             href="#">Contact</a> <a href="/index.html"><img alt="Great Idea! Company logo."
+             href="#">Contact</a> <a class="img"
+             href="/index.html"><img alt="Great Idea! Company logo."
              class="logo"
              src="img/logo.png"></a>
       </nav>
